fix: styles for forms on mobile devices

--- a/src/app/components/forms/client-forms/create-client-form/create-client-form.component.css
+++ b/src/app/components/forms/client-forms/create-client-form/create-client-form.component.css
@@ -44,3 +44,13 @@ button.formButton{
     width: 100%;
     margin-top: 30px;
 }
+
+@media (max-width: 576px){
+
+    .clientForm {
+        width: 80%;
+        margin-bottom: 10dvh;
+    }
+
+
+    }
