--- a/src/app/components/forms/client-forms/update-client-form/update-client-form.component.css
+++ b/src/app/components/forms/client-forms/update-client-form/update-client-form.component.css
@@ -100,3 +100,18 @@ form input{
 .updateButton {
     margin-right: 10px;
 }
+
+
+@media (max-width: 576px){
+
+    .searchBarWrapper{
+        width: 80%;
+
+    }
+
+    .updateClientForm {
+        width: 80%;
+    }
+
+
+}
