--- a/src/app/components/forms/product-forms/update-product-form/update-product-form.component.css
+++ b/src/app/components/forms/product-forms/update-product-form/update-product-form.component.css
@@ -96,3 +96,18 @@ form input{
 .updateButton {
     margin-right: 10px;
 }
+
+
+@media (max-width: 576px){
+
+
+    .searchBarWrapper{
+        width: 80%;
+    }
+
+    .updateProductForm {
+        width: 80%;
+    }
+
+
+}
